[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "armsd"
version = "1.0.0"
requires-python = ">=3.11"
authors = [
    { name = "Arne Wagner", email="arne.wagner@aci.uni-heidelberg.de" },
]
maintainers = [
    { name = "Norwid Behrnd", email="nbehrnd@yahoo.com" },
]
description = "Pair-wise comparison and superposition (RMSD) of small molecule structures"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["chemistry", "crystallography", "rmsd", "Kabsch", "molecular structure"]

# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
    "numpy>=2.0",
    "matplotlib>=3.8",
    "vtk>=9.2",
    "uncertainties>=3.1",
    "openbabel>=3.2.0",
]

[project.urls]
Homepage = "https://github.com/nbehrnd/aRMSD"

[project.scripts]
armsd = "armsd.aRMSD:main"

[tool.setuptools.packages.find]
where = ["src"]

# Ship settings.cfg and the entire xsf/ reference-data folder with the wheel
[tool.setuptools.package-data]
armsd = ["settings.cfg", "xsf/*.nff", "xsf/_info"]
